# market-data-vwap-snapper

./: .gitignore  Analyse book.ipynb  OrderBook Vwap - Test.ipynb  brutta_copia.ipynb  non_executable_order_book.py  order_book.py  pyproject.toml  requirements.txt  simple_order_book.py  sql connection.ipynb  vwap.ipynb
market_data_vwap_snapper/: bitstamp.py  coinbase.py  config.py  kraken.py  main.py  models.py  test.py  utils.py  vertex.py
market_data_vwap_snapper/params/: bitstamp_trading_pairs.json
